[package]
name = "rp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
rp2040-boot2 = { version = "0.2.0", optional = true }
#rp2040-hal = { path = "../../rp2040-hal", version = "0.4.0"}
cortex-m-rt = { version = "0.7" }
panic-halt = "0.2.0"
solderparty-rp2040-stamp = "0.1.0"
infrared = { path = "../.." }
usb-device = "0.2.8"
usbd-serial = "0.1.1"
heapless = "0.7.10"